Fri Dec 08 04:11:01 GMT 2006  Olly Betts <olly@survex.com>

	* java/native/Enquire.cc: Fix MatchDecider to work.
	* java/SmokeTest.java: Add feature/regression test for MatchDecider
	  subclassing.

Thu Dec 07 02:25:25 GMT 2006  Olly Betts <olly@survex.com>

	* java/native/Enquire.cc: Fix MatchDecider and ExpandDecider to look
	  for an "accept" method with the correct signature (bool return value
	  not int).  Reported by Alex Kushkuley.

Thu Dec 07 02:08:56 GMT 2006  Olly Betts <olly@survex.com>

	* java/org/xapian/ESetIterator.java: Fix bug in ESetIterator.hasNext()
	  reported by Alex Kushkuley.
	* java/SmokeTest.java: Add regression test.

Mon Dec 04 03:31:36 GMT 2006  Olly Betts <olly@survex.com>

	* java/SmokeTest.java,java/native/Enquire.cc,
	  java/org/xapian/Enquire.java: Fit Enquire.getESet() to be callable.

Mon Dec 04 03:22:35 GMT 2006  Olly Betts <olly@survex.com>

	* java/SmokeTest.java,java/org/xapian/RSet.java: Add missing default
	  constructor for RSet class - it's not much use without this!

Thu Nov 16 04:01:23 GMT 2006  Olly Betts <olly@survex.com>

	* xapian-bindings.spec.in: Remove "." from the end of the Summary.

Thu Nov 16 03:05:09 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac: As of xapian-core 0.8.0, XO_LIB_XAPIAN doesn't need to
	  be called with arguments if you want a hard requirement on xapian,
	  so remove the arguments.

Wed Nov 15 19:55:57 GMT 2006  Olly Betts <olly@survex.com>

	* java/README: Note success with Sun's JDK 1.5.0_06-b05, plus the
	  requirement to add the linux header directory to the include path.

Sun Nov 12 22:40:06 GMT 2006  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog file in preparation for branching and
	  merging.

Sun Nov 12 21:35:42 GMT 2006  Olly Betts <olly@survex.com>

	* python/util.i: Need to use Py_ssize_t for length with
	  PyString_AsStringAndSize() so the build with Python 2.5.

Thu Nov 09 00:23:27 GMT 2006  Olly Betts <olly@survex.com>
