@@ -26,6 +26,10 @@ class MyMatchDecider implements MatchDecider {
     }
 }
 
+class MyExpandDecider implements ExpandDecider {
+    public boolean accept(String s) { return s.substring(0, 1) != "a"; }
+}
+
 public class SmokeTest {
     public static void main(String[] args) throws Exception {
 	try {
@@ -104,10 +108,14 @@ public class SmokeTest {
 
 	    RSet rset = new RSet();
 	    rset.addDocument(1);
-	    ESet eset = enq.getESet(10, rset);
+	    ESet eset = enq.getESet(10, rset, new MyExpandDecider());
 	    ESetIterator eit = eset.iterator();
 	    int count = 0;
 	    while (eit.hasNext()) {
+		if (eit.getTerm().substring(0, 1) == "a") {
+		    System.err.println("MyExpandDecider wasn't used");
+		    System.exit(1);
+		}
 		++count;
 		eit.next();
 	    }
@@ -115,6 +123,7 @@ public class SmokeTest {
 		System.err.println("ESet.size() mismatched number of terms returned by ESetIterator");
 		System.exit(1);
 	    }
+
 	    MSet mset2 = enq.getMSet(0, 10, null, new MyMatchDecider());
 	    if (mset2.size() > 0) {
 		System.err.println("MyMatchDecider wasn't used");
