@@ -1,3 +1,8 @@
+Fri Dec 08 04:13:32 GMT 2006  Olly Betts <olly@survex.com>
+
+	* java/SmokeTest.java: Add feature/regression test for ExpandDecider
+	  which also now works thanks to the last checkin.
+
 Fri Dec 08 04:11:01 GMT 2006  Olly Betts <olly@survex.com>
 
 	* java/native/Enquire.cc: Fix MatchDecider to work.
